--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-14 11:45:56
+lastsearch = 2024-07-14 14:24:55
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -113.6%%
-title = Molecular Biology of Lung Cancer: Clinical Implications
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
+match = -72.7%%
+title = The Role of Resveratrol in Cancer Therapy - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5751192/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -595,4 +595,14 @@ url = https://www.dtcc.com/-/media/Files/Downloads/client-center/NSCC/nscc.xls
 match = -122.7%%
 title = Find A Supplier > Supplier Listing By NAICS Categories ...
 url = http://www.alamedacountyca.gov/sleb_query_app/vendordirlistnaics.jsp?SECTOR_CODE=54
+
+[cptforptsd.com]
+match = 0.0%%
+title = CPT Provider Roster
+url = https://cptforptsd.com/cpt-provider-roster/
+
+[www.seakexperts.com]
+match = 0.0%%
+title = Expert Witness Directory 2022
+url = https://www.seakexperts.com/content/Expert_Witness_Directory_SEAK.pdf
 
