--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-14 12:39:56
+lastsearch = 2024-07-14 14:16:46
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -231.2%%
-title = Cuộc di cư lịch sử tại Viêt Nam - Page 66 - Google Books Result
-url = https://books.google.com/books?id=Cag8AAAAMAAJ&pg=PA66&lpg=PA66&dq=chieu+lac+soc+18&source=bl&ots=N_dTD7gvWK&sig=ACfU3U3pnQSG9dJaBYNDpw9ERIVGVrCHQQ&hl=en&sa=X&ved=2ahUKEwiercLX6KWHAxVgEUQIHT9jACUQ6AF6BAgbEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHaaHQ3jse&sig=ACfU3U0-cEkq_6O9omjl0EeL6U5_LQmDdA&hl=en&sa=X&ved=2ahUKEwjp9_mp_qWHAxVCk4kEHXZKC9sQ6AF6BAgcEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
