CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-14 11:37:49
+lastsearch = 2024-07-14 14:33:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = 7.1%%
-title = Cuối Giờ Chiều
-url = https://www.facebook.com/cuoigiochieu/
+match = -218.8%%
+title = 🔴 Bản tin trưa 13/7/2024 | VTC1 | Bản tin trưa 13/7/2024 ...
+url = https://www.facebook.com/vtc1tintuc/videos/-bản-tin-trưa-1372024-vtc1/1143044220138649/
 
 [suckhoedoisong.vn]
 match = -212.5%%
