--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-14 11:52:04
+lastsearch = 2024-07-14 14:33:40
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -82,9 +82,9 @@ title = XEBEC Brush™ Wheel Type
 url = https://aulac-global.com.vn/san-pham/xebec-brush-wheel-type/
 
 [www.instagram.com]
-match = -93.3%%
-title = Vu Hoang My (@vuhoangmyofficial)
-url = https://www.instagram.com/vuhoangmyofficial/?hl=en
+match = -206.7%%
+title = Linh Doan (@linhdzoan) • Instagram photos and videos
+url = https://www.instagram.com/linhdzoan/
 
 [www.ministop.vn]
 match = -26.7%%
@@ -260,4 +260,9 @@ url = https://katinat.vn/cua-hang-2/
 match = -206.7%%
 title = Xoilac TV - Xem Trực Tiếp Bóng Đá Xôi Lạc TV hôm nay HD
 url = https://xoilaczvv.tv/
+
+[www.visaforkorea-vt.com]
+match = -113.3%%
+title = Korea Visa Application Center in Ha Noi
+url = https://www.visaforkorea-vt.com/
 
