--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-14 11:47:00
+lastsearch = 2024-07-14 14:30:04
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -255,4 +255,24 @@ url = https://www.morriscountyclerk.org/files/sharedassets/clerk/v/1/elections/p
 match = -42.9%%
 title = Diretrizes brasileiras de obesidade
 url = https://abeso.org.br/wp-content/uploads/2019/12/Diretrizes-Download-Diretrizes-Brasileiras-de-Obesidade-2016.pdf
+
+[city2.grand-island.com]
+match = -50.0%%
+title = 1962 Minutes
+url = http://city2.grand-island.com/WebLink/DocView.aspx?id=8576&dbid=0&repo=City-of-GI
+
+[www.floridapsc.com]
+match = -200.0%%
+title = y....~~
+url = https://www.floridapsc.com/library/filings/2008/10097-2008/10097-2008.pdf
+
+[petalumadocs.cityofpetaluma.net]
+match = -150.0%%
+title = Untitled
+url = https://petalumadocs.cityofpetaluma.net/WebLink/DocView.aspx?id=378433&dbid=0&repo=Petaluma
+
+[archive.encinitasca.gov]
+match = -104.8%%
+title = 1998-11-03 - IIS Windows Server - City of Encinitas
+url = https://archive.encinitasca.gov/WebLink/DocView.aspx?id=620107&dbid=0&repo=CityofEncinitas
 
