--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-14 13:51:03
+lastsearch = 2024-07-14 14:28:17
 
 [www.reddit.com]
 match = -82.6%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -121.7%%
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [lol.fandom.com]
 match = 0.0%%
