--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-14 11:47:09
+lastsearch = 2024-07-14 14:30:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Thảm giường bo đê 15
 url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 
 [shopee.vn]
-match = -95.0%%
-title = Bộ Drap 4 món Ga giường thun lạnh HQ [ NỆM CAO 15- ...
-url = https://shopee.vn/Bộ-Drap-4-món-Ga-giường-thun-lạnh-HQ-NỆM-CAO-15-25CM-gồm-1-ga-2-vỏ-nằm-1-vỏ-ôm-i.177151023.20208763729
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [sofatoanquoc.com]
 match = 30.0%%
