--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-14 13:50:36
+lastsearch = 2024-07-14 14:29:53
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = -80.0%%
+title = Matthew Cooperberg, MD, MPH - UCSF Profiles
+url = https://profiles.ucsf.edu/matthew.cooperberg
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q6.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -120.0%%
-title = Physical fitness training for stroke patients - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6464717/
+match = -115.0%%
+title = Therapy and Cardiovascular Toxicity in Cancer - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6028047/
 
 [www.energy.gov]
 match = -95.0%%
@@ -360,4 +360,14 @@ url = https://repository.library.noaa.gov/view/noaa/40918/noaa_40918_DS1.pdf
 match = -155.0%%
 title = Chapter 5: Demand, services and social aspects of mitigation
 url = https://www.ipcc.ch/report/ar6/wg3/chapter/chapter-5/
+
+[pubs.acs.org]
+match = -145.0%%
+title = Observational Insights into Aerosol Formation from Isoprene
+url = https://pubs.acs.org/doi/10.1021/es4011064
+
+[www.odu.edu]
+match = 5.0%%
+title = Faculty Publications
+url = https://www.odu.edu/library/faculty-publications
 
