CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-14 13:24:34
+lastsearch = 2024-07-14 14:48:52
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -10.0%%
+title = Donghak Peasant Revolution
+url = https://en.wikipedia.org/wiki/Donghak_Peasant_Revolution
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -135.0%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.akc.org]
 match = -45.0%%
@@ -132,9 +132,9 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -85.0%%
-title = Legal adult age in Korea is 19, not 18 : r/kpoprants
-url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
+match = -150.0%%
+title = Why my teacher told us that 'eighteen' is a bad word in ...
+url = https://www.reddit.com/r/Korean/comments/12esgv/why_my_teacher_told_us_that_eighteen_is_a_bad/
 
 [timesofindia.indiatimes.com]
 match = -115.0%%
@@ -227,9 +227,9 @@ title = SSD prices could steady or even drop as NAND chip ...
 url = https://www.pcgamer.com/hardware/storage/ssd-prices-set-to-tumble-as-nand-chip-makers-boost-production/
 
 [www.youtube.com]
-match = -135.0%%
-title = Inside The "North Korea" of Africa 🇪🇷: How It Really Is (#174)
-url = https://www.youtube.com/watch?v=lAHumbL12Z8
+match = -155.0%%
+title = Korean Pronunciation Guide - 네 (NE or DE?) & 뭐 (MWO or ...
+url = https://www.youtube.com/watch?v=zhf9NWKHjqE
 
 [carnegieendowment.org]
 match = -90.0%%
@@ -302,9 +302,9 @@ title =
 url = https://languagelog.ldc.upenn.edu/nll/?p=39433
 
 [www.quora.com]
-match = -115.0%%
-title = Hey, can I move out at 18 and move to South Korea ...
-url = https://www.quora.com/Hey-can-I-move-out-at-18-and-move-to-South-Korea-and-get-a-degree-there
+match = -125.0%%
+title = Can I move to South Korea at the age of 18 and graduate ...
+url = https://www.quora.com/Can-I-move-to-South-Korea-at-the-age-of-18-and-graduate-from-a-high-school-there-without-my-parents-permission-I-live-in-America-and-the-age-of-adulthood-here-is-18-so-I-can-leave-the-country-right
 
 [hospitalfield.org.uk]
 match = -90.0%%
