--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-14 13:53:08
+lastsearch = 2024-07-14 14:47:57
 
 [everon.online]
 match = 19.2%%
@@ -128,8 +128,8 @@ url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va
 
 [www.youtube.com]
 match = -69.2%%
-title = Bài ca bốn mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
-url = https://www.youtube.com/watch?v=IAxENR2TG3k
+title = Bài Ca Bốn Mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
+url = https://www.youtube.com/watch?v=7uuXmCaHgCw
 
 [www.thegioididong.com]
 match = -11.5%%
