--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-14 11:53:14
+lastsearch = 2024-07-14 15:19:35
 
 [chanrathanhthuy.com]
-match = -6.5%%
-title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
-url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
+match = -3.2%%
+title = Chọn màu sắc chăn ga gối đệm hợp phong thủy vợ chồng
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-vo-chong-1469.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 63.3%%
+title = Bộ chăn ga gối lụa 6 món L6M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UC23 035
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
+title = Bộ chăn ga gối SH_UT20 001
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut20-001
 
 [changagoidemsonghong.com]
-match = 38.7%%
-title = Bộ chăn ga gối Walt Disney mã mầu YC22012
-url = https://changagoidemsonghong.com/chan-ga-goi-yc22012
+match = -29.0%%
+title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
+url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
 
 [foreverbedding.net]
 match = -3.2%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -22.6%%
-title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
-url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
+match = -19.4%%
+title = Top 10+ bộ chăn ga gối Sông Hồng chính hãng giá tốt, được ...
+url = https://changagoidemsonghong.online/top-10-bo-chan-ga-goi-song-hong-chinh-hang-gia-tot-duoc-yeu-thich.html
 
 [www.facebook.com]
 match = -6.5%%
