--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-14 13:38:24
+lastsearch = 2024-07-14 15:25:29
 
 [demxanh.com]
-match = -3.6%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = -42.9%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
 
 [www.diepxuan.com]
 match = -3.6%%
@@ -114,7 +114,7 @@ url = http://www.responsinator.com/?aaa&ccode=0001&classname=产品展示&mnid=5
 [archive.org]
 match = 7.1%%
 title = Video help, tips, and techniques
-url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://911soft.ru/dxcegkindfe99.html
+url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn-----6kcbaefdcuda3ajhb7addn3airdibd2ak4bf8a59a.xn--p1ai/ABCr79tfe8fe43z
 
 [www.semex.com]
 match = -32.1%%
