--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-14 14:31:21
+lastsearch = 2024-07-14 15:24:00
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = 8.7%%
+title = 1972 in the Vietnam War
+url = https://en.wikipedia.org/wiki/1972_in_the_Vietnam_War
 
 [www.facebook.com]
 match = -13.0%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -121.7%%
-title = S. Korean vice foreign minister holds bilateral meetings at ...
-url = https://en.yna.co.kr/view/AEN20171121002500315
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -462,9 +462,9 @@ title = South Korean Crypto Exchanges Set to Review Over ...
 url = https://cryptonews.com/news/south-korean-exchanges-set-to-review-over-1300-tokens.htm
 
 [synapse.koreamed.org]
-match = -25.0%%
-title = Original Article
-url = https://synapse.koreamed.org/articles/1119644
+match = -233.3%%
+title = Review
+url = https://synapse.koreamed.org/articles/1084195
 
 [www.cambridge.org]
 match = -121.7%%
