--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-14 13:41:33
+lastsearch = 2024-07-14 15:26:10
 
 [shopee.vn]
 match = -216.7%%
@@ -43,8 +43,8 @@ url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
 match = -241.7%%
-title = Thảm ghế nệm ghế kích thước 2m2 x 55cm mẫu màu đỏ ...
-url = https://tiki.vn/tham-ghe-nem-ghe-kich-thuoc-2m2-x-55cm-mau-mau-do-moi-co-vien-p89638586.html
+title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
+url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
 
 [suongtuyet.com]
 match = -125.0%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -250.0%%
-title = Thảm ghế nệm ghế mẫu mới loại 1m6,5 x55cm ... - Lazada
-url = https://www.lazada.vn/products/tham-ghe-nem-ghe-mau-moi-loai-1m65-x55cm-cac-mau-do-vang-i1526583829.html
+match = -266.7%%
+title = Thảm ghế 2m2 x 55cm nệm lót ghế gỗ hoàng gia đỏ kích ...
+url = https://www.lazada.vn/products/tham-ghe-2m2-x-55cm-nem-lot-ghe-go-hoang-gia-do-kich-thuoc-co-dai-2m2-x-55cm-gom-1-tam-dai-va-2-tam-ngan-i902914335.html
 
 [vn.my-best.com]
 match = -233.3%%
@@ -72,8 +72,8 @@ title = Nệm lót ghế salon gỗ - nệm ngồi
 url = https://noithatktp.com/nem-lot-ngoi-simili-chong-tham-nuoc
 
 [unicostrading.com]
-match = -358.3%%
-title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai ...
+match = -391.7%%
+title = Meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham ... - Unicos
 url = https://unicostrading.com/meo-nho-ve-sinh-nem-lot-ghe-ngoi-gia-re-chinh-xac-tham-trai-san1/
 
 [viethands.vn]
