CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-14 11:52:16
+lastsearch = 2024-07-14 15:36:58
 
 [hoa18.com]
 match = -84.2%%
@@ -185,4 +185,9 @@ url = https://atgt.baogiaothong.vn/cap-cuu-mot-lai-tau-hoa-bi-nem-da-trung-dau-1
 match = -152.6%%
 title = is this reefslider pool float real? where could i get it?
 url = https://www.reddit.com/r/Splatoon3/comments/1cc8ucp/is_this_reefslider_pool_float_real_where_could_i/
+
+[laodong.vn]
+match = -168.4%%
+title = Ném đá tàu, xe là trò chơi man rợ, phá hoại tài sản và có ...
+url = https://laodong.vn/su-kien-binh-luan/nem-da-tau-xe-la-tro-choi-man-ro-pha-hoai-tai-san-va-co-the-giet-nguoi-1365866.ldo
 
