--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-14 13:47:14
+lastsearch = 2024-07-14 15:41:48
 
 [demxanh.com]
 match = 26.1%%
@@ -190,4 +190,9 @@ url = https://resttime.vn/
 match = -87.0%%
 title = Mua Bán Gà Chọi Khỏe Đẹp, Gà Đá Cựa Chắc, Gà Nòi Giá ...
 url = https://www.chotot.com/mua-ban-ga-choi-sdcp6
+
+[laodong.vn]
+match = 4.3%%
+title = Tin tức SỨC KHỎE mới nhất 24h
+url = https://laodong.vn/suc-khoe?page=1674
 
