--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-14 14:44:28
+lastsearch = 2024-07-14 15:39:04
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67spKNQL&sig=ACfU3U2VIEmJMp2ZG8bzsO2ZfnsEg2_rUg&hl=en&sa=X&ved=2ahUKEwj-zIrChKaHAxWgmIkEHXQXADkQ6AF6BAgWEAM
+match = -176.5%%
+title = Official Army Register - Page 356 - Google Books Result
+url = https://books.google.com/books?id=TOYsAAAAIAAJ&pg=RA1-PA356&lpg=RA1-PA356&dq=man+in+hoa+dep+16&source=bl&ots=m4CdStKbJW&sig=ACfU3U3Nuj5AMtihWPn15yiONzf92sI_eA&hl=en&sa=X&ved=2ahUKEwiMyMzckKaHAxWnFVkFHbbjDdQQ6AF6BAgWEAM
 
 [tax.vermont.gov]
 match = -29.4%%
