CI images update

--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-14 13:38:35
+lastsearch = 2024-07-14 15:52:07
 
 [vinatools.com]
-match = -206.7%%
-title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+match = -140.0%%
+title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
 match = -93.3%%
@@ -172,9 +172,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [www.tiktok.com]
-match = -246.7%%
-title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
+match = -66.7%%
+title = D3 and K2 Supplements Height
+url = https://www.tiktok.com/discover/d3-and-k2-supplements-height
 
 [www.lazada.vn]
 match = -146.7%%
@@ -220,4 +220,9 @@ url = https://www.victoriavn.com/
 match = -153.3%%
 title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
+
+[hcdc.vn]
+match = -213.3%%
+title = danh sách điểm tiêm vắc-xin phòng covid-19 ngày 22/3/2023
+url = https://hcdc.vn/hoidap/index/chitiet/b5f73d288ea96f141a64c180a6ed9be3
 
