--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-14 15:36:03
+lastsearch = 2024-07-14 15:53:20
 
 [www.gov.uk]
 match = -200.0%%
@@ -850,4 +850,19 @@ url = https://thepowerrank.com/world-football-soccer/
 match = 0.0%%
 title = 
 url = https://football-ranking.com/rankByConfederation?zone=AFC&period=
+
+[www.coe.edu]
+match = -233.3%%
+title = Coe College: One of the Best Small Colleges in the Country
+url = https://www.coe.edu/
+
+[www.endocrine.org]
+match = -73.3%%
+title = Endocrine Society: Endocrine.org
+url = https://www.endocrine.org/
+
+[www.nimh.nih.gov]
+match = -253.3%%
+title = Autism Spectrum Disorder - National Institute of Mental Health
+url = https://www.nimh.nih.gov/health/topics/autism-spectrum-disorders-asd
 
