--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-14 15:41:48
+lastsearch = 2024-07-14 15:46:18
 
 [demxanh.com]
 match = 26.1%%
@@ -112,9 +112,9 @@ title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80apbkdj.xn--p1ai/59682419zfe43a
 
 [www.tiktok.com]
-match = -31.2%%
-title = Addinsonin Tauti
-url = https://www.tiktok.com/discover/addinsonin-tauti
+match = 0.0%%
+title = Gapylary Açarsyz Açýan Mp3
+url = https://www.tiktok.com/discover/gapylary-açarsyz-açýan-mp3
 
 [usth.edu.vn]
 match = -78.3%%
