--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-14 13:24:16
+lastsearch = 2024-07-14 15:49:12
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -156.2%%
+title = Gloss for life - #beautytok - #hudabeauty - #lip
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [www.diepxuan.com]
 match = -150.0%%
@@ -62,8 +62,8 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.instagram.com]
-match = -193.8%%
-title = Meliá Hotels & Resorts | It's time to enjoy a warm dream ...
+match = -237.5%%
+title = Meliá Hotels & Resorts | It's time to enjoy a warm dream resort ...
 url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 
 [demxanh.com]
