--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-14 16:47:51
+lastsearch = 2024-07-14 17:46:05
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -57,9 +57,9 @@ title = Con lắc đơn gồm sợi dây có chiều dài 1,63 m và quả cầu
 url = https://tuyensinh247.com/bai-tap-618536.html
 
 [www.thegioididong.com]
-match = -193.8%%
-title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
-url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
+match = -212.5%%
+title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
+url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
 
 [vnexpress.net]
 match = -131.2%%
