--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-14 16:14:33
+lastsearch = 2024-07-14 17:49:07
 
 [www.zillow.com]
 match = -69.2%%
@@ -47,9 +47,9 @@ title = 18 Long St, Newnan, GA 30263
 url = https://www.redfin.com/GA/Newnan/18-Long-St-30263/home/23481920
 
 [en.wikipedia.org]
-match = -69.2%%
-title = Before the Coffee Gets Cold
-url = https://en.wikipedia.org/wiki/Before_the_Coffee_Gets_Cold
+match = -42.9%%
+title = Gallium
+url = https://en.wikipedia.org/wiki/Gallium
 
 [www.youtube.com]
 match = -276.9%%
