CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-14 17:19:48
+lastsearch = 2024-07-14 18:11:50
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -242,9 +242,9 @@ title = Xét xử lưu động vụ án tàng trữ trái phép chất ma túy
 url = https://congan.kontum.gov.vn/an-ninh-trat-tu/toi-pham-va-vi-pham-phap-luat/xet-xu-luu-dong-vu-an-tang-tru-trai-phep-chat-ma-tuy.html
 
 [vnexpress.net]
-match = -156.2%%
-title = Phương Linh: 'Tôi hạn chế khoe chuyện yêu đương'
-url = https://vnexpress.net/phuong-linh-toi-han-che-khoe-chuyen-yeu-duong-4766408.html
+match = -106.2%%
+title = Em thích không khí gia đình vui vẻ, đầm ấm
+url = https://vnexpress.net/em-thich-khong-khi-gia-dinh-vui-ve-dam-am-4769773.html
 
 [canbangdongclc.com]
 match = -75.0%%
@@ -420,4 +420,14 @@ url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-thang-co-day-lon-276m-day-be-bang
 match = -237.5%%
 title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉnh Quy hoạch ...
 url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
+
+[baotintuc.vn]
+match = -212.5%%
+title = Lãi suất cho vay mua nhà thấp kỷ lục có đẩy tín dụng bật ...
+url = https://baotintuc.vn/tai-chinh-ngan-hang/lai-suat-cho-vay-mua-nha-thap-ky-luc-co-day-tin-dung-bat-tang-20240714165646877.htm
+
+[langsontv.vn]
+match = -56.2%%
+title = Hải hành cùng tàu kiểm ngư KN390
+url = https://langsontv.vn/news/457/72665/hai-hanh-cung-tau-kiem-ngu-kn390
 
