--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-14 17:45:31
+lastsearch = 2024-07-14 18:17:07
 
 [zhangbrickshop.com]
 match = -133.3
@@ -17,9 +17,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [shopvnb.com]
-match = -166.7%%
-title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
-url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
+match = -173.3%%
+title = Top 8 sân cầu lông Gò Vấp chất lượng năm 2024 ...
+url = https://shopvnb.com/danh-sach-cac-san-cau-long-go-vap-nam-2020-cac-long-thu-da-biet-chua-.html
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -62.5%%
-title = D2 DECOR
-url = https://www.facebook.com/trangtrinoithat.d2decor/?locale=vi_VN
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -237,9 +237,9 @@ title = Funk Sessions at Lo 49 at TBA - Lo 49 (D2, HCMC), Vietnam
 url = https://ra.co/events/1561702
 
 [hdbank.com.vn]
-match = -213.3%%
-title = HDBank hợp tác với Trung tâm Xúc tiến Thương mại và ...
-url = https://hdbank.com.vn/vi/news/detail/tin-tuc/hdbank-hop-tac-voi-trung-tam-xuc-tien-thuong-mai-va-dau-tu-tinh-an-giang-tang-suc-bat-cho-doanh-nghiep-dia-phuong
+match = 6.7%%
+title = Liên hệ với HDBank
+url = https://hdbank.com.vn/contact
 
 [www.celadonsrc.com.vn]
 match = 0.0%%
