--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-14 16:29:43
+lastsearch = 2024-07-14 18:14:00
 
 [www.tui.co.uk]
-match = -41.7%%
-title = 14 Night Holiday Deals
-url = https://www.tui.co.uk/destinations/deals/2-week-holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = 0.0%%
-title = 
+match = -233.3%%
+title = Book Cheap TUI Airways Limited Flights to Seoul
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -167,9 +167,9 @@ title = Tour giant TUI expects bright summer | REUTERS
 url = https://www.youtube.com/watch?v=cToNcnSxFgs
 
 [www.thenaturaladventure.com]
-match = -283.3%%
-title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
+match = -325.0%%
+title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
