--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-14 16:38:06
+lastsearch = 2024-07-14 18:31:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Bộ ga chun chần bốn mùa 180x200 SH
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BC22 060
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-060
+match = 0.0%%
+title = Bộ sản phẩm SH_BC22 066
+url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [everon.online]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22032 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22032.html
+title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
 
 [everonchinhhang.vn]
 match = 0.0%%
