--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-14 16:50:22
+lastsearch = 2024-07-14 18:27:32
 
 [www.cms.gov]
 match = 4.5%%
@@ -605,4 +605,9 @@ url = https://cptforptsd.com/cpt-provider-roster/
 match = 0.0%%
 title = Expert Witness Directory 2022
 url = https://www.seakexperts.com/content/Expert_Witness_Directory_SEAK.pdf
+
+[www.vftt.org]
+match = -36.4%%
+title = Tripyramids from the Kanc, 5/30/05 - vftt
+url = https://www.vftt.org/threads/tripyramids-from-the-kanc-5-30-05.6808/
 
