--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-14 11:48:02
+lastsearch = 2024-07-14 18:49:02
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
 url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
@@ -33,13 +33,13 @@ url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 753 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-753-chinh-hang-cao-cap
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 739 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-739-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu xanh đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
+title = Bộ ga chun Cotton chống thấm màu ghi nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
 match = -61.1%%
