--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-14 17:51:11
+lastsearch = 2024-07-14 18:45:28
 
 [demxanh.com]
-match = 13.8%%
-title = Chiếu điều hòa cao su non đa sắc hình 3 chú thỏ
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-hinh-3-chu-tho.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
@@ -57,7 +57,12 @@ title = chiếu điều hoà cao su non 2d+ plush
 url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 
 [foreverbedding.net]
-match = 17.2%%
-title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
+match = -37.9%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+
+[russo.vn]
+match = -17.2%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
