--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-14 17:47:53
+lastsearch = 2024-07-14 18:51:57
 
 [www.linkedin.com]
 match = -172.7%%
@@ -345,4 +345,9 @@ url = https://www.movemint.cc/events/tam_trail_time_trial_2024
 match = -9.1%%
 title = Kansas Register
 url = https://www.sos.ks.gov/publications/Register/Volume-41/PDF/Vol-41-No-34-August-25-2022-July-2022-Forfeitures.pdf
+
+[drinkbivo.com]
+match = -336.4%%
+title = Beyond the Kingdom Trails: Mountain Bike Trail Networks ...
+url = https://drinkbivo.com/blogs/news/beyond-kingdom-trails
 
