--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-14 15:46:59
+lastsearch = 2024-07-14 19:35:12
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 16
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 
 [goni.vn]
-match = 4.2%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -50.0%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [demxanh.com]
 match = -25.0%%
