--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-14 16:22:15
+lastsearch = 2024-07-14 19:31:45
 
 [www.tiktok.com]
 match = -217.6%%
@@ -68,8 +68,8 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
 match = -194.1%%
-title = Diccionario Geográfico Universal ... Por una Sociedad de ...
-url = https://books.google.com/books?id=R43cLG3JbFQC&pg=PA908&lpg=PA908&dq=man+in+hoa+dep+16&source=bl&ots=o5JpeCm8t8&sig=ACfU3U3Xnc2_CGpVHqg83mhcMqCz7U5Jng&hl=en&sa=X&ved=2ahUKEwiin9uvmqaHAxUphIkEHYI0BaEQ6AF6BAgWEAM
+title = Index-catalogue of the Library of the Surgeon General's ...
+url = https://books.google.com/books?id=yT4iAQAAMAAJ&pg=RA1-PA553&lpg=RA1-PA553&dq=man+in+hoa+dep+16&source=bl&ots=XJbPqHXx3f&sig=ACfU3U1TOz_s3OHO_odO7qIfXPgAkCawZQ&hl=en&sa=X&ved=2ahUKEwipycrdxKaHAxWYEFkFHS7VDnQQ6AF6BAgTEAM
 
 [tax.vermont.gov]
 match = -29.4%%
