--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-14 16:31:27
+lastsearch = 2024-07-14 20:18:02
 
 [hk.linkedin.com]
-match = -23.1%%
-title = Coco Chan - Wellesley
-url = https://hk.linkedin.com/in/coco-chan-734351222
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -238.5%%
