--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-14 03:34:10
+lastsearch = 2024-07-14 20:16:12
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu trúc tre chiếu cao bằng tây bắc nhiều cỡ đủ size 
 url = https://www.lazada.vn/products/chieu-truc-tre-chieu-cao-bang-tay-bac-nhieu-co-du-size-tam-hoa-i1312559243.html
 
 [shopee.vn]
-match = -69.6%%
-title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
-url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
+match = 43.5%%
+title = Chiếu trúc cao bằng 1.4m x 1.95
+url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
 
 [lombom.com]
 match = -60.9%%
@@ -28,13 +28,13 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = TÌM HIỂU CHIẾU TRÚC CAO BẰNG BÁN TẠI SÀI GÒN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/tim-hieu-chieu-truc-cao-bang-ban-tai-sai-gon-59.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [khodem.vn]
 match = -56.5%%
