--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-14 18:48:53
+lastsearch = 2024-07-14 20:17:40
 
 [shopee.vn]
 match = 2.9%%
@@ -77,14 +77,14 @@ title = Chiếu Điều Hoà Tencel Cao Su Non Cho Bé kèm gối 2024
 url = https://www.hangjapan.com/chieu-dieu-hoa-tencel-cao-su-non-cho-be-kem-goi/
 
 [tiki.vn]
-match = 14.7%%
-title = Chiếu điều hòa cao su non hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu điều hòa cao su non
+match = 44.1%%
+title = Chiếu điều hòa hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu điều hòa
 
 [vtvhyundai.vn]
-match = 14.7%%
-title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+match = 26.5%%
+title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
 
 [ru9.vn]
 match = 8.8%%
