--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-14 18:16:19
+lastsearch = 2024-07-14 20:13:44
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [tiki.vn]
 match = -16.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/
+match = -16.0%%
+title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
+url = https://www.facebook.com/groups/anchoidailoan/
 
 [vi.wikipedia.org]
 match = -4.0%%
@@ -188,8 +188,8 @@ url = https://www.instagram.com/toiodailoan/p/C7Dmp74AkwU/
 
 [www.skyscanner.com.vn]
 match = -48.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
-url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
+title = Vé máy bay giá rẻ từ Hoa Kỳ đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/us/tw/hoa-ky-to-đai-loan.html
 
 [tamloppoly.vn]
 match = -20.0%%
