CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-14 19:34:37
+lastsearch = 2024-07-14 20:50:21
 
 [tiki.vn]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -40.0%%
-title = Văn Mẫu Lớp 12 (Tập 4) - Google Books Result
-url = https://books.google.com/books?id=mUwIEQAAQBAJ&pg=PT593&lpg=PT593&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=K6Fwr9iPhg&sig=ACfU3U0I4If4zpxJsKtPjUDEHCvLzCb9fQ&hl=en&sa=X&ved=2ahUKEwjMhN2vxaaHAxWHGlkFHXjZBTgQ6AF6BAgVEAM
+match = -44.0%%
+title = Chiến sĩ Cộng Hòa - Page 12 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=PA12&lpg=PA12&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=p30PZJ8UKq&sig=ACfU3U3_XkzWlmmIFgth6DN0Gm8wSK9qfw&hl=en&sa=X&ved=2ahUKEwjw5qmm1qaHAxUuJUQIHSkcCoYQ6AF6BAgYEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
