--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-14 18:19:37
+lastsearch = 2024-07-14 21:41:35
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
 match = 14.8%%
@@ -97,8 +97,8 @@ title = Chiếu Mây Điều Hòa cao cấp
 url = https://nemsaithanh.com/chieu-truc-cac-loai/chieu-may-dieu-hoa-cao-cap/
 
 [fptshop.com.vn]
-match = 0.0%%
-title = 
+match = -29.6%%
+title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [voicon.net]
