--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-14 21:18:21
+lastsearch = 2024-07-14 21:38:26
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -19.0%%
-title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
+match = -114.3%%
+title = Top 8 thương hiệu nệm bông ép chất lượng nhất hiện nay!
+url = https://demxanh.com/top-thuong-hieu-nem-bong-ep-chat-luong-nhat-hien-nay.html
 
 [www.ebay.com]
 match = -128.6%%
@@ -27,19 +27,19 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -61.9%%
-title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
+match = -128.6%%
+title = Siêu thị chăn ga gối đệm chính hãng - KM15-60%% kèm quà ...
+url = https://sieuthidemonline.vn/
 
 [thegioidemviet.vn]
-match = -9.5%%
-title = Bảng giá Đệm Bông Ép - Hà Nội
-url = https://thegioidemviet.vn/dem-bong-ep/
+match = 14.3%%
+title = Nệm Cao Su Bông Kim Cương
+url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -105,4 +105,9 @@ url = https://www.huduser.gov/portal/sites/default/files/pdf/Codebook-for-the-AH
 match = 0.0%%
 title = Chăn ga gối đệm Everhome
 url = https://demeverhome.com/
+
+[www.delta-xray.net]
+match = -66.7%%
+title = {isopb} Paulo coelho interview nederlands
+url = https://www.delta-xray.net/redir.php?URL=https://xn--j1agbcagmi.xn--p1ai/63589145ttfe43a
 
