--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-14 20:52:10
+lastsearch = 2024-07-14 21:45:34
 
 [demxanh.com]
-match = -27.3%%
-title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [demre.com.vn]
 match = 25.0%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=alpha-desc
 
 [thegioidemonline.vn]
-match = -45.5%%
-title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -37,9 +37,9 @@ title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
-match = 13.6%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 45.5%%
+title = Điệp Xuân Thảm giường nỉ 140x190
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [shopee.vn]
 match = -81.8%%
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -118.2%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
+match = -72.7%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
