CI images update

--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-14 17:37:23
+lastsearch = 2024-07-14 21:53:28
 
 [demtot.com]
-match = -44.4%%
-title = Đệm Lò Xo
-url = https://demtot.com/dem-lo-xo/
+match = 42.9%%
+title = Đệm lò xo túi Adaptive
+url = https://demtot.com/dem-lo-xo-tui-adaptive/
 
 [tuananh.vn]
 match = 52.4%%
