--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-14 21:22:26
+lastsearch = 2024-07-14 21:49:18
 
 [shopee.vn]
 match = -52.4%%
@@ -12,9 +12,9 @@ title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [www.lazada.vn]
-match = -128.6%%
-title = Ga trải giường chống thấm nước bảo vệ đệm hàng loại đẹp kích ...
-url = https://www.lazada.vn/products/ga-trai-giuong-chong-tham-nuoc-bao-ve-dem-hang-loai-dep-kich-thuoc-16-x-2m-ga-trai-giuong-chong-tham-nuoc-bao-ve-dem-hang-loai-dep-kich-thuoc-16x2m-i257442579.html
+match = -76.2%%
+title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
+url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
 
 [tiki.vn]
 match = -38.1%%
