--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-14 15:45:16
+lastsearch = 2024-07-14 21:46:35
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -13.3%%
-title = Máng đèn HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/mang-den-htlight
+match = -133.3%%
+title = Đèn mắt ếch chiếu điểm HT 8094 10W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
-match = -120.0%%
-title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
-url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
+match = -60.0%%
+title = Đèn Pha LED 5054 - HT Max Light
+url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
