--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-14 21:19:42
+lastsearch = 2024-07-14 21:46:57
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -218.8%%
-title = [2 HOUR] TAM BÔI LY BIỆT REMIX || CẦN VINH x LEE KEN x ...
-url = https://www.youtube.com/watch?v=Jt_x9hRoBlo
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -445,4 +445,14 @@ url = https://stockbiz.vn/tin-tuc/vnindex-co-the-quay-lai-nguong-1300-diem/26841
 match = -212.5%%
 title = Gợi ý vui chơi và ăn uống “tẹt ga” 3 ngày 2 đêm tại thành ...
 url = https://baothanhhoa.vn/goi-y-vui-choi-va-an-uong-tet-ga-3-ngay-2-dem-tai-thanh-pho-phao-hoa-da-nang-219432.htm
+
+[www.vietjack.com]
+match = -218.8%%
+title = Trong thực hành, để đo gia tốc trọng trường, một học sinh ...
+url = https://www.vietjack.com/sbt-vat-li-11-cd/cau-1-18-trang-12-sbt-vat-li-lop-11.jsp
+
+[tcnn.vn]
+match = -131.2%%
+title = kwin kwin ♑【WW88.Game】ua vé số trực tuyến
+url = https://tcnn.vn/bmw/9165539/
 
