--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-14 12:14:02
+lastsearch = 2024-07-14 21:52:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [www.youtube.com]
-match = -119.0%%
-title = Dương Quốc Hoàng VS Châu Chiêu Minh - TỨ KẾT | GIẢI ...
-url = https://www.youtube.com/watch?v=K7cd3_k9HH4
+match = -90.5%%
+title = Châu Chiêu Minh VS Nguyễn Hoàng Minh Tài - VÒNG 16 ...
+url = https://www.youtube.com/watch?v=9FCitqIxHeY
 
 [chieutruc.info]
 match = -71.4%%
@@ -525,4 +525,9 @@ url = https://www.binhduong.gov.vn/thong-tin-tuyen-truyen/2024/07/981-cong-bo-ch
 match = -90.5%%
 title = Chơn Thành trao thẻ căn cước cho công dân dưới 14 tuổi
 url = https://binhphuoc.gov.vn/vi/news/chuyen-doi-so/chon-thanh-trao-the-can-cuoc-cho-cong-dan-duoi-14-tuoi-37688.html
+
+[giavang.pnj.com.vn]
+match = 10.5%%
+title = Giá vàng: Trang chủ
+url = https://giavang.pnj.com.vn/
 
