--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-14 21:44:12
+lastsearch = 2024-07-14 21:47:51
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Riot is cutting back budget on esports?
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
+match = 0.0%%
+title = 
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
-title = CDT Jake Sorrels successfully defended his senior thesis “ ...
-url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
+title = West Point Department of History - CPT Makonen Campbell asks ...
+url = https://www.facebook.com/photo.php?fbid=2240494186000553&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
@@ -340,4 +340,9 @@ url = https://uk.news.yahoo.com/on-this-day-psy-gangnam-style-075352911.html
 match = -140.0%%
 title = Porofessor.gg - Valós idejű League of Legends játék és ...
 url = https://porofessor.gg/hu/
+
+[fonts.google.com]
+match = 0.0%%
+title = Google Fonts: Browse Fonts
+url = https://fonts.google.com/
 
