--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-14 21:46:57
+lastsearch = 2024-07-14 22:46:17
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -392,9 +392,9 @@ title = Nghề dệt chiếu ở Cần Thơ
 url = https://www.cantho.gov.vn/wps/portal/home/du-khach/chi-tiet/diem-tham-quan/lang-nghe/nghe+det+chieu+o+can+tho
 
 [books.google.com]
-match = -193.8%%
-title = Gazetteer - United States Board on Geographic Names: ...
-url = https://books.google.com/books?id=Na-bLk2za5sC&pg=PA137&lpg=PA137&dq=chieu+lac+gam+18&source=bl&ots=rTT9NPFA40&sig=ACfU3U2yoVbi4o7cJXZ0I-7Bvpe59Ig6JQ&hl=en&sa=X&ved=2ahUKEwj374uP6qGHAxWf5MkDHXQaAEUQ6AF6BAgcEAM
+match = -218.8%%
+title = Northern Vietnam: Official Standard Names Approved by the ...
+url = https://books.google.com/books?id=9OJle8CiBVQC&pg=PA137&lpg=PA137&dq=chieu+lac+gam+18&source=bl&ots=ymQZno1or2&sig=ACfU3U3J76kITabxyb45nFIiIsqMVzxAqw&hl=en&sa=X&ved=2ahUKEwjZorKb8KaHAxX_jokEHXawCHYQ6AF6BAgbEAM
 
 [g7tools.com]
 match = -175.0%%
