--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-14 17:38:14
+lastsearch = 2024-07-14 22:45:14
 
 [everon.online]
-match = -32.4%%
-title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
-url = https://everon.online/blogs/video/4
+match = -29.4%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-23031 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est23031.html
+title = Everon ESM-22014 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esm22014.html
 
 [nem.vn]
 match = 5.9%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 5.9%%
-title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+match = 17.6%%
+title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
+url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html
 
 [everonvn.com.vn]
 match = 32.1%%
