--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-14 20:17:40
+lastsearch = 2024-07-14 22:44:41
 
 [shopee.vn]
 match = 2.9%%
@@ -37,9 +37,9 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [khonemtonghop.com]
-match = 30.0%%
-title = Chiếu Cao Su Non Có Tốt Không?
-url = https://khonemtonghop.com/chieu-cao-su-non-co-tot-khong/
+match = 58.8%%
+title = Chiếu điều Hòa Cao Su Non Là Gì ...
+url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
 
 [suongtuyet.com]
 match = 17.6%%
@@ -82,9 +82,9 @@ title = Chiếu điều hòa hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu điều hòa
 
 [vtvhyundai.vn]
-match = 26.5%%
-title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
+match = 14.7%%
+title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [ru9.vn]
 match = 8.8%%
