--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 13:55:09
+lastsearch = 2024-07-14 22:44:03
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,14 +67,14 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -237.5%%
-title = SỐC: Thương lái ôm tiền tỷ biến mất, người nuôi tôm khóc hết ...
-url = https://www.youtube.com/watch?v=1RKUOd84ucQ
+match = -218.8%%
+title = Toàn cảnh Quốc tế 14/7: F-16 bắt đầu xuất kích ở Ukraine ...
+url = https://www.youtube.com/watch?v=Hni1WRoCH2M
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaaHQ2gt7&sig=ACfU3U3pSvPY0RlFnxp0ObTNUjC7gMvBqA&hl=en&sa=X&ved=2ahUKEwis2ry_-aWHAxXZIEQIHWvIAAgQ6AF6BAgaEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=rq3aAAAAMAAJ&pg=RA6-PA66&lpg=RA6-PA66&dq=chieu+lac+soc+16&source=bl&ots=W7J5BT1eWM&sig=ACfU3U3Ryd4jFxU-pnZp0aoDyY0UM4v9wA&hl=en&sa=X&ved=2ahUKEwjE8qvb76aHAxXphIkEHe4gB8kQ6AF6BAgYEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
