--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-14 21:48:45
+lastsearch = 2024-07-14 22:41:32
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [chieutrelinhchi.com]
-match = 3.6%%
-title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1m6x1m9
-url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-khong-vien-mau-vang-1m6x1m9-91.html
+match = 0.0%%
+title = Chiếu trúc hạt nhỏ không viền màu nâu đen Size: 1m8x2m
+url = https://chieutrelinhchi.com/chieu-truc-1m8/chieu-truc-hat-nho-khong-vien-mau-nau-1m8x2m-101.html
 
 [dem24h.vn]
 match = 46.4%%
@@ -57,9 +57,9 @@ title = Chiếu Trúc Hạt Đen Không Viền - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-hat-den-khong-vien/
 
 [noithatbamboo.vn]
-match = 14.3%%
-title = Chiếu trúc mắt mai không viền màu vàng 120x190cm
-url = https://noithatbamboo.vn/chieu-truc-hat-1m2/chieu-truc-mat-mai-khong-vien-mau-vang-120x190cm.html
+match = 17.9%%
+title = Chiếu trúc mắt mai không viền màu vàng 180x200cm
+url = https://noithatbamboo.vn/chieu-truc-hat-1m8/chieu-truc-mat-mai-khong-vien-mau-vang-180x200cm.html
 
 [www.lazada.vn]
 match = -35.7%%
