--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-14 14:50:03
+lastsearch = 2024-07-14 22:39:57
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Louise Laurent
+url = https://profiles.ucsd.edu/louise.laurent
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Nicholas Butowski, MD
-url = https://profiles.ucsf.edu/nicholas.butowski
+match = 0.0%%
+title = Jim Wells - UCSF Profiles
+url = https://profiles.ucsf.edu/james.wells
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -212,9 +212,9 @@ title = Table of contents
 url = https://ieeexplore.ieee.org/iel7/6648471/6658393/06658395.pdf
 
 [medschool.uci.edu]
-match = -30.8%%
-title = Alpesh N Amin
-url = https://medschool.uci.edu/about/faculty/anamin
+match = -38.5%%
+title = Jaime Landman
+url = https://medschool.uci.edu/about/faculty/landmanj
 
 [floridapsc.com]
 match = -137.5%%
