--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-14 17:35:46
+lastsearch = 2024-07-14 22:42:59
 
 [www.lazada.vn]
 match = -166.7%%
@@ -13,8 +13,8 @@ url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khon
 
 [shopee.vn]
 match = -140.0%%
-title = Vỏ gối vuông tựa Tây Âu 48cmx48cm vải gấm nhung ...
-url = https://shopee.vn/Vỏ-gối-vuông-tựa-Tây-Âu-48cmx48cm-vải-gấm-nhung-gối-tựa-lưng-sofa-vỏ-gối-ôm-gối-vuông-trang-trí-decor-sang-trọng-i.18055727.2459433258
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
@@ -22,8 +22,8 @@ title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/vo-goi-trang-tri
 
 [chus.vn]
-match = 0.0%%
-title = Vỏ Gối Vuông H'mông - Chus.vn
+match = -173.3%%
+title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
 url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
