CI images update

--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-14 22:42:15
+lastsearch = 2024-07-14 23:22:11
 
 [dongagroup.vn]
 match = -272.7%%
@@ -22,14 +22,14 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -81.8%%
-title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
-url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
+match = -27.3%%
+title = Giuonggaphoaphat.com
+url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
-match = -172.7%%
-title = giường nhựa cứng ecoplast cao cấp gec60
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
+match = -227.3%%
+title = GIƯỜNG NHỰA CAO CẤP CHIN HUEI 2.0PLUS GN15PLUS
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-cao-cap-chin-huei-2-0plus-gn15plus/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -137,9 +137,9 @@ title = Giường gấp 2 khúc - Công ty DAMITA hàn quốc
 url = https://damita.vn/danh-muc-san-pham/giuong-gap/giuong-gap-2-khuc/
 
 [vexere.com]
-match = -336.4%%
-title = Vé xe Giường nằm đôi của 7 nhà xe từ Sài Gòn đi Phan Thiết
-url = https://vexere.com/vi-VN/ve-xe-giuong-nam-doi-tu-sai-gon-di-phan-thiet-binh-thuan-129t2961.html
+match = -345.5%%
+title = Đặt vé xe giường nằm đôi đi Đắk Lắk từ Sài Gòn giá tốt nhất
+url = https://vexere.com/vi-VN/ve-xe-giuong-nam-doi-tu-sai-gon-di-dak-lak-129t1161.html
 
 [bentreriverside.com]
 match = -81.8%%
@@ -165,4 +165,14 @@ url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=156
 match = -163.6%%
 title = Nệm cho giường 1 2 3 tay quay cao cấp
 url = https://giuongbenh.vn/nem-cho-giuong-1-2-3-tay-quay-cao-cap.html
+
+[www.ykhoakimyen.com]
+match = -172.7%%
+title = Giường kéo cột sống lung 2 khúc TJM-GK01
+url = https://www.ykhoakimyen.com/chi-tiet/giuong-keo-cot-song-lung-2-khuc-tjm-gk01.html
+
+[www.igea.com.vn]
+match = -309.1%%
+title = Giường Ngủ Gỗ Công Nghiệp Hiện Đại có ngăn kéo đa năng
+url = https://www.igea.com.vn/products/giuong-ngu-hien-dai-gp248
 
