--- a/images/chieu-cay-ht-18/config.ini
+++ b/images/chieu-cay-ht-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-18.html
 lastopen = 2024-06-09 22:15:47
 
 [search]
-lastsearch = 2024-07-14 21:44:32
+lastsearch = 2024-07-14 23:23:49
 
 [shadow.vn]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Đèn pin FENIX HT18 Hunting (1500 Lumens)
 url = https://bisu.vn/den-pin-fenix-ht18-hunting-1500-lumens-p18720670.html
 
 [www.youtube.com]
-match = -220.0%%
-title = 2 Giọng Ca Gây Nghiện Triệu Người Nghe Với Bài Hát Định ...
-url = https://www.youtube.com/watch?v=7yeCp_gHVjk
+match = -246.7%%
+title = Review đèn pin Fenix HT18 sáng 1500 lumens, chiếu xa 925 ...
+url = https://www.youtube.com/watch?v=9T0cK1pjzWY
 
 [vnqtech.com]
 match = -200.0%%
@@ -124,7 +124,7 @@ url = https://www.amazon.com/256X192-Higher-Resolution-Handheld-Thermal/dp/B0BVT
 [olm.vn]
 match = -240.0%%
 title = Bài 1 ; một thửa ruộng hình thang có đáy 28 m , đáy bé 18 ...
-url = https://olm.vn/hoi-dap/tim-kiem?id=928648&q=Bài 1 ; một thửa ruộng hình thang có đáy 28 m , đáy bé 18 m và chiều cao hơn đáy bé 7m . Người ta cấy lúa trên thửa ruộng đó . Cứ 100 m2 thu hoạch được 62 kg thóc  . Tính số kg thóc thu được tròn thửa ruộng đó . 
+url = https://olm.vn/hoi-dap/tim-kiem?id=928648&q=Bài 1 ; một thửa ruộng hình thang có đáy 28 m , đáy bé 18 m và chiều cao hơn đáy bé 7m . Người ta cấy lúa trên thửa ruộng đó . Cứ 100 m2 thu hoạch được 62 kg thóc  . Tính số kg thóc thu được tròn thửa ruộng đó .
 
 [m.facebook.com]
 match = -40.0%%
