--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-14 22:25:34
+lastsearch = 2024-07-14 23:19:17
 
 [demxanh.com]
-match = 13.8%%
-title = Chiếu điều hòa cao su non đa sắc hình 3 chú thỏ
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-hinh-3-chu-tho.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = -17.2%%
-title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
+match = 13.8%%
+title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
 
 [nanara.vn]
 match = 34.5%%
