--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-14 22:23:06
+lastsearch = 2024-07-14 23:16:43
 
 [demxanh.com]
 match = -135.3%%
@@ -32,14 +32,14 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -70.6%%
-title = Chiếu trúc hạt ,hàng loại 1 [🚀 ship hỏa tốc]
-url = https://shopee.vn/Chiếu-trúc-hạt-hàng-loại-1-🚀-ship-hỏa-tốc--i.363378833.10326359415
+match = -135.3%%
+title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
+url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
 
 [vongxepsaigon.vn]
-match = -188.2%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+match = 47.1%%
+title = chiếu trúc hạt nâu đen
+url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [www.diepxuan.com]
 match = -64.7%%
