--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-14 18:16:07
+lastsearch = 2024-07-14 23:19:29
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -182.4%%
-title = HOA founded after I bought my house. Can I be forced to ...
-url = https://www.quora.com/HOA-founded-after-I-bought-my-house-Can-I-be-forced-to-join
+match = -194.1%%
+title = If you live in a neighborhood with a HOA can they keep out ...
+url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -82,9 +82,9 @@ title =
 url = https://www.cedarmanagementgroup.com/trespassing-in-hoa/
 
 [www.hopb.co]
-match = -170.6%%
-title = What About the Children? HOA Age Restrictions and FHA ...
-url = https://www.hopb.co/blog/what-about-the-children-hoa-age-restrictions-and-fha-proscriptions
+match = -135.3%%
+title = Virginia HOA Laws, Rules, Resources & Information
+url = https://www.hopb.co/virginia
 
 [www.deanmead.com]
 match = 0.0%%
@@ -430,4 +430,9 @@ url = https://www.southfloridalawpllc.com/2021/08/15/qa-florida-hoa-board-member
 match = 0.0%%
 title = 
 url = https://www.nomadicrealestate.com/hoa-rules-hierarchy/
+
+[www.wbtv.com]
+match = -170.6%%
+title = Neighborhood HOA asks man to take down Pride flag in ...
+url = https://www.wbtv.com/2023/09/27/hoa-asks-man-take-down-pride-flag-union-county/
 
