--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-14 18:31:44
+lastsearch = 2024-07-14 23:55:37
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -61.9%%
+title = Bảng giá bán lẻ Ga chun Everon Ep1834 - Rose
+url = https://everonvn.com.vn/everon/704/ga-chun-everon-ep1834-rose
 
 [www.everonqb.com]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -119.0%%
-title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
-url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
+match = -95.2%%
+title = Giảm giá Bộ chăn ga gối phủ trần bông 7 món satin
+url = https://muathongminh.vn/bo-chan-ga-goi-phu-tran-bong-7-mon-satin-p.1__7848970894__300618428
 
 [beecost.vn]
 match = -61.9%%
@@ -42,9 +42,9 @@ title = Energy suspension shifter bushings?
 url = https://www.thegalantcenter.org/showthread.php?33765-Energy-suspension-shifter-bushings
 
 [forum.ih8mud.com]
-match = -76.2%%
-title = 200 series factory 17s importing to the US
-url = https://forum.ih8mud.com/threads/200-series-factory-17s-importing-to-the-us.1339940/
+match = -147.6%%
+title = Updates to CruiserOutfitters.Com & CruiserTeq.com | Page 2
+url = https://forum.ih8mud.com/threads/updates-to-cruiseroutfitters-com-cruiserteq-com.306671/page-2
 
 [www.ar15.com]
 match = 0.0%%
