--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-14 21:50:12
+lastsearch = 2024-07-14 23:53:04
 
 [www.youtube.com]
 match = -330.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = 14 days with you ren
-url = https://www.tumblr.com/tagged/14 days with you ren
+match = -40.0%%
+title = Ren NSFW alphabet
+url = https://www.tumblr.com/14dayswithyou/692620485331238912/ren-nsfw-alphabet
 
 [www.garagejournal.com]
 match = -200.0%%
