--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-14 21:45:01
+lastsearch = 2024-07-14 23:52:01
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Learning Hungarian on Duolingo | I was looking for a list ...
 url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
 
 [www.instagram.com]
-match = 4.8%%
-title = Jenna Dewan (@jennadewan)
-url = https://www.instagram.com/jennadewan/?hl=en
+match = -100.0%%
+title = Adam Mosseri (@mosseri) • Instagram photos and videos
+url = https://www.instagram.com/mosseri/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -107,9 +107,9 @@ title = Rover.com: Book Dog Boarding, Dog Walking and More
 url = http://www.rover.com/
 
 [www.youtube.com]
-match = -23.8%%
-title = Edith Piaf - Non, Je ne regrette rien
-url = https://www.youtube.com/watch?v=Q3Kvu6Kgp88
+match = -152.4%%
+title = Gotye - Somebody That I Used To Know (feat. Kimbra) [Official ...
+url = https://www.youtube.com/watch?v=8UVNT4wvIGY
 
 [www.epa.gov]
 match = -19.0%%
