CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-14 22:42:48
+lastsearch = 2024-07-15 00:52:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [www.youtube.com]
-match = -90.5%%
-title = Châu Chiêu Minh VS Nguyễn Hoàng Minh Tài - VÒNG 16 ...
-url = https://www.youtube.com/watch?v=9FCitqIxHeY
+match = -123.8%%
+title = Trần Minh Khải VS Nguyễn Khánh Hoàng - TỨ KẾT | GIẢI ...
+url = https://www.youtube.com/watch?v=BwhSgkKke2A
 
 [chieutruc.info]
 match = -71.4%%
