--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-14 23:50:13
+lastsearch = 2024-07-15 00:45:24
 
 [www.facebook.com]
 match = -45.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = -45.0%%
-title = Bộ chăn ga gối tencel eu pyeoda 5 món
-url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-tencel-eu-pyeoda-5-mon
+match = 5.0%%
+title = Bộ chăn ga gối pyeoda
+url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
 match = -95.0%%
