--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-14 19:32:21
+lastsearch = 2024-07-15 00:49:05
 
 [www.lazada.vn]
 match = -55.6%%
@@ -62,9 +62,9 @@ title = Perspective on photonic memristive neuromorphic computing
 url = https://www.photonix.cn/article/doi/10.1186/s43074-020-0001-6
 
 [www.pinkbike.com]
-match = -88.9%%
-title = Freerider 1 and 2 Thread Cont. - Page 190
-url = https://www.pinkbike.com/forum/listcomments/?threadid=62026&pagenum=190
+match = -150.0%%
+title = Freerider 1 and 2 thread - Page 90 - Pinkbike Forum
+url = https://www.pinkbike.com/forum/listcomments/?threadid=176&pagenum=90
 
 [www.c-span.org]
 match = 0.0%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -200.0%%
-title = Crometta S, Shower system 240 1jet with single lever mixer ...
-url = https://pro.hansgrohe.com/articledetail-crometta-s-shower-system-240-1jet-with-single-lever-mixer-27958000
+match = -155.6%%
+title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
+url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -259,7 +259,7 @@ url = https://www.nrc.gov/docs/ML1922/ML19221A563.pdf
 [www.axor-design.com]
 match = -111.1%%
 title = 3-hole basin mixer 70 with push-open waste set
-url = https://www.axor-design.com/asia/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
+url = https://www.axor-design.com/int/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
 
 [changakhachsan.net]
 match = 43.8%%
