--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-14 18:11:30
+lastsearch = 2024-07-15 02:16:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -26.7%%
+title = Expats in Da Nang City
+url = https://www.facebook.com/groups/expatsindanangcity/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -142,9 +142,9 @@ title = Phê duyệt đồ án quy hoạch chi tiết xây dựng tỷ lệ 1/50
 url = https://benluc.longan.gov.vn/dat-dai/phe-duyet-do-an-quy-hoach-chi-tiet-xay-dung-ty-le-1-500-du-an-giai-phong-mat-bang-tao-quy-dat-sa-928998
 
 [www.tiktok.com]
-match = -260.0%%
-title = Đi ăn ốc Singapore ở khu D2 Bình Thạnh với tui, rổ rá bình ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7308207874562395393
+match = -66.7%%
+title = D3 and K2 Supplements Height
+url = https://www.tiktok.com/discover/d3-and-k2-supplements-height
 
 [www.ministop.vn]
 match = -93.3%%
