--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-14 22:28:15
+lastsearch = 2024-07-15 02:18:53
 
 [www.galottery.com]
 match = -7.7%%
@@ -143,8 +143,8 @@ url = https://www.fabtechexpo.com/
 
 [www.georgianicols.com]
 match = -153.8%%
-title = Daily Horoscope for Friday, June 14, 2024
-url = https://www.georgianicols.com/daily
+title = Daily Horoscope for Sunday, July 14, 2024
+url = https://www.georgianicols.com/daily/
 
 [sos.ga.gov]
 match = -146.2%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
-url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
+match = -253.8%%
+title = 0462-209-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
+url = https://www.deutschconnectorstore.com/p-86-deutsch-0462-209-16141-contact-16-14-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
