--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-15 00:22:17
+lastsearch = 2024-07-15 03:15:36
 
 [www.tiktok.com]
 match = -217.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illXBz20M&sig=ACfU3U2qV6nu0LB3R3IAlH2u-x5QBS1kPA&hl=en&sa=X&ved=2ahUKEwj-8OPVhaeHAxWnFjQIHfDHB4QQ6AF6BAgbEAM
+match = -58.8%%
+title = The New International Encyclopædia
+url = https://books.google.com/books?id=O2YSKyGWiOoC&pg=PA178-IA1&lpg=PA178-IA1&dq=man+in+hoa+dep+16&source=bl&ots=AuuqVTP_Pn&sig=ACfU3U3hBKmhmxPnI_Y6FRdqyx514awDsw&hl=en&sa=X&ved=2ahUKEwiRqrS0rKeHAxXhGFkFHeZ9DXkQ6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
