--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-14 23:21:57
+lastsearch = 2024-07-15 03:14:39
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlovFo13zY&sig=ACfU3U1HMpOecQh6CudSU8Ad0q4iCh4krQ&hl=en&sa=X&ved=2ahUKEwiN8deX-KaHAxVpEVkFHdKNDWIQ6AF6BAgVEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerPLlpe&sig=ACfU3U27hVj07KELQ3gpZU0vb2OJ3jQTfg&hl=en&sa=X&ved=2ahUKEwif2o6ZrKeHAxXaFlkFHW5dCCoQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -320.0%%
-title = MC REN (@realmcren) • Instagram photos and videos
-url = https://www.instagram.com/realmcren/?hl=en
+match = -100.0%%
+title = The Ren Men (@the_ren_men)
+url = https://www.instagram.com/the_ren_men/
 
 [www.youtube.com]
 match = -170.0%%
