--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-15 02:31:42
+lastsearch = 2024-07-15 03:12:43
 
 [www.amazon.com]
 match = -309.1%%
@@ -47,9 +47,9 @@ title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
 url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
-match = -109.1%%
-title = 50+ Mẫu Bọc Ghế Da Xe Camry Đẹp
-url = https://bocghedaoto.net/boc-ghe-da-xe-camry
+match = -181.8%%
+title = Bọc ghế da ô tô chất lượng cao Tại Nhà
+url = https://bocghedaoto.net/boc-ghe-da-oto-tai-nha
 
 [ghedagiago.com]
 match = -290.9%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -136.4%%
-title = Thảm Lót Ghế Sofa Da Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/
+match = -227.3%%
+title = Thảm Lông Cừu Lót Ghế Giá Tốt T06/2024 - Lazada
+url = https://www.lazada.vn/tag/tham-long-cuu-lot-ghe/
 
 [richhome.vn]
 match = -190.9%%
