CI images update

--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-15 02:27:58
+lastsearch = 2024-07-15 04:11:05
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -340,4 +340,9 @@ url = https://www.instagram.com/fabianajustus/?hl=en
 match = 4.3%%
 title = Stray Kids (Band) - Works
 url = https://archiveofourown.org/tags/Stray Kids (Band)/works
+
+[eur-lex.europa.eu]
+match = 0.0%%
+title = C_2009265HU.01000101.xml
+url = https://eur-lex.europa.eu/legal-content/HU/TXT/HTML/?uri=CELEX:52009XG1106(01)
 
