--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-15 02:26:12
+lastsearch = 2024-07-15 04:17:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -390,4 +390,9 @@ url = https://hcdc.vn/danh-sach-diem-tiem-vacxin-phong-covid19-ngay-0932023-ca5d
 match = -73.3%%
 title = Cơ Mezz EC9-D2 ngọn WX-Σ (Sigma)
 url = https://bida123.vn/product/co-mezz-ec9-d2/
+
+[mt.gov.vn]
+match = -246.7%%
+title = Xe buýt đến sân bay Nội Bài gồm những tuyến xe nào, lộ ...
+url = https://mt.gov.vn/tk/tin-tuc/55347/xe-buyt-den-san-bay-noi-bai-gom-nhung-tuyen-xe-nao--lo-trinh-ra-sao.aspx
 
