--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 22:44:03
+lastsearch = 2024-07-15 04:16:08
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Toàn cảnh Quốc tế 14/7: F-16 bắt đầu xuất kích ở Ukrain
 url = https://www.youtube.com/watch?v=Hni1WRoCH2M
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=rq3aAAAAMAAJ&pg=RA6-PA66&lpg=RA6-PA66&dq=chieu+lac+soc+16&source=bl&ots=W7J5BT1eWM&sig=ACfU3U3Ryd4jFxU-pnZp0aoDyY0UM4v9wA&hl=en&sa=X&ved=2ahUKEwjE8qvb76aHAxXphIkEHe4gB8kQ6AF6BAgYEAM
+match = -218.8%%
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu5ZY9EWn&sig=ACfU3U0P_idenAKOq_Hdf1YxSPrSGt_aYQ&hl=en&sa=X&ved=2ahUKEwiMiab4uaeHAxVxj4kEHcOfB1QQ6AF6BAgaEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
