--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-14 22:23:17
+lastsearch = 2024-07-15 04:15:35
 
 [shopee.vn]
 match = -146.7%%
@@ -17,9 +17,9 @@ title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
 url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
 
 [ghedatruongan.com]
-match = -37.5%%
-title = Sản phẩm
-url = https://ghedatruongan.com/san-pham/
+match = -86.7%%
+title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN NĂM 2024
+url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
 match = -93.3%%
